# flucs_fluid_itg

./: CITATION.cff  LICENCE.md  README.md  pyproject.toml
src/flucs_fluid_itg/: _version.py
src/flucs_fluid_itg/cold_itg_2d_fourier/: __init__.py  cold_itg_2d_fourier.cu  cold_itg_2d_fourier.py  cold_itg_2d_fourier.toml  cold_itg_2d_fourier_diagnostics.py
src/flucs_fluid_itg/cold_itg_2d_fourier/postprocessing/: check_conservation_energy.py  conservation_laws.py  plot_heatflux_vs_time.py
