[project]
name = "flucs-fluid-itg"
description = "A collection of flucs systems for various fluid models of ITG turbulence"
authors = [
    {name = "P. G. Ivanov"}, 
    {name = "T. Adkins", email = "tadkins@pppl.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flucs"]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/flucs_fluid_itg/_version.py"   # create this at build/install time
fallback_version = "0.0"    

[project.entry-points."flucs.systems"]
ColdITG2DFourier = "flucs_fluid_itg.cold_itg_2d_fourier.cold_itg_2d_fourier:ColdITG2DFourier"
